# mcc-py

./: .gitignore  mcc.py  pyproject.toml
duckdb/: fts.sql  setup.sql  trips.sql
