[tool.poetry]
name = "mcc"
version = "0.1.0"
description = ""
authors = ["Paul Burt <paul.burt@bbc.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
duckdb = "^0.8.1"
polars = "^0.18.3"
pyarrow = "^12.0.1"
prefect = "^2.10.16"

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.pyright.analysis]
typeCheckingMode = "strict"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
